# doc/swagger.yaml
@@ -200,6 +200,27 @@ paths:
           description: "Invalid ID supplied"
         404:
           description: "Query not found"
+    delete:
+      tags:
+      - "query"
+      summary: "Deletes a query"
+      description: ""
+      operationId: "deleteQuery"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "queryId"
+        in: "path"
+        description: "Query id to delete"
+        required: true
+        type: "integer"
+        format: "int64"
+        x-exportParamName: "QueryId"
+      responses:
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Query not found"
   /query/approve/{queryId}:
     post:
       tags:
@@ -239,9 +260,9 @@ paths:
     delete:
       tags:
       - "query"
-      summary: "Deletes a query"
+      summary: "Deletes an approval of a query"
       description: ""
-      operationId: "deleteQuery"
+      operationId: "deleteApprovalQuery"
       produces:
       - "application/json"
       parameters:
@@ -257,7 +278,34 @@ paths:
           description: "Invalid ID supplied"
         404:
           description: "Query not found"
+  /databases:
+    get:
+      tags:
+      - "databases"
+      summary: "Get list of databases"
+      operationId: "getDatabases"
+      produces:
+      - "application/json"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Server"
+        400:
+          description: "Invalid tag value"
 definitions:
+  Server:
+    type: "object"
+    required:
+    - "uri"
+    - "name"
+    properties:
+      name:
+        type: "string"
+      uri:
+        type: "string"
   User:
     type: "object"
     required:
